# staticforms

./: pyproject.toml
examples/: test_site.html
staticforms/: __init__.py
tests/: test_staticforms.py
